[package]
name = "order_service"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
actix-web = "4.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rdkafka = { version = "0.35.0", features = ["cmake-build"] }